# pvr.ard

./: CMakeLists.txt  README.md  azure-pipelines.yml
pvr.ard/: LICENSE.txt  addon.xml.in
pvr.ard/resources/: settings.xml
pvr.ard/resources/language/resource.language.de_de/: strings.po
pvr.ard/resources/language/resource.language.en_gb/: strings.po
pvr.ard/resources/language/resource.language.en_us/: strings.po
src/: Globals.h  PVRARD.cpp  PVRARD.h  Settings.cpp  Settings.h
src/http/: HttpClient.cpp  HttpClient.h
